lw1.7
Обновлена папка с проектом LW3 до лабораторной 1.7.